made some small changes to the title

--- a/index.html
+++ b/index.html
@@ -19,13 +19,10 @@
                     <li><a href="" class="link blue-line">Contact Me</a></li>
                 </ul>
             </nav>
-            <div class="header-title">
-                <a>The Color Changer</a>
-            </div>
         </header>
         <main>
             <section class="main-title">
-                <h2 class="title"><span class="red">Co</span><span class="orange">lo</span><span class="yellow">r Ch</span><span class="blue">ang</span><span class="cyan">er</span></h2>
+                <a>The <span class="large">Color</span> Changer</a>
                 <div class="line"></div>
             </section>
             <section class="color-body">
