--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <div class="color-section color4"></div>
                 <div class="color-section color5"></div>
             </section>
-            <div class="button">
-                <button class="button1">Click me!</button>
+            <div class="button">  
+                <a href="#" class="btn new">Randomizer</a>
             </div>
         </main>
         <footer></footer>
