--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Color Changer</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <header>
@@ -33,10 +33,10 @@
                 <div class="color-section color5"></div>
             </section>
             <div class="button">  
-                <a href="#" class="btn new">Randomizer</a>
+                <a onclick="setRandomColor()" class="btn new">Randomizer</a>
             </div>
         </main>
-        <footer></footer>
+        <script type="text/javascript" src="./script.js"></script>
     </body>
 </html>
 
